[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Chat.gd" type="Script" id=1]
[ext_resource path="res://fonts/message_background.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/veteran_typewriter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/SkipWait.gd" type="Script" id=4]
[ext_resource path="res://images/ui/paper.png" type="Texture" id=5]
[ext_resource path="res://images/ui/exit.png" type="Texture" id=6]
[ext_resource path="res://images/ui/chat2.png" type="Texture" id=7]
[ext_resource path="res://images/ui/cancel2.png" type="Texture" id=8]
[ext_resource path="res://images/ui/shoot2.png" type="Texture" id=9]
[ext_resource path="res://images/ui/sleep2.png" type="Texture" id=10]
[ext_resource path="res://images/ui/search2.png" type="Texture" id=11]
[ext_resource path="res://images/ui/intel2.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]

size = 45
use_mipmaps = false
use_filter = false
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = false
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0.835022, 0.601563, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 1
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="DynamicFont" id=4]

size = 37
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0.835022, 0.601563, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 15
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[node name="Chat" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Announcements" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="SearchContainer" type="VBoxContainer" parent="Announcements" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 183.0
margin_right = 720.0
margin_bottom = 334.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags", "custom_constants" ]

[node name="SearchTitle" type="Label" parent="Announcements/SearchContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "'s Inventory"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="SearchInfo" type="Label" parent="Announcements/SearchContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 720.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "0 Bullets 0 Darts 0 Intel Confiscated"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Error" type="Label" parent="Announcements" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 338.0
margin_right = 720.0
margin_bottom = 386.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Waiting for players... (1/4)"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Timer" type="Timer" parent="Announcements/Error" index="0"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="VictoryGood" type="Label" parent="Announcements" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 390.0
margin_right = 720.0
margin_bottom = 489.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Agents Win!
The traitor was eliminated."
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="VictoryBad" type="Label" parent="Announcements" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 493.0
margin_right = 720.0
margin_bottom = 592.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Traitor Wins!
All agents eliminated."
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="IntelContainer" type="CenterContainer" parent="Announcements" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 596.0
margin_right = 720.0
margin_bottom = 1096.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="IntelBackground" type="TextureRect" parent="Announcements/IntelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_right = 610.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="IntelDisplay" type="Label" parent="Announcements/IntelContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_top = 50.0
margin_right = 597.0
margin_bottom = 450.0
rect_min_size = Vector2( 475, 400 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "The traitor has a..."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="UIContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="TopBar" type="HBoxContainer" parent="UIContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="Exit" type="TextureButton" parent="UIContainer/TopBar" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
expand = true
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Visibility" ]

[node name="Objective" type="Label" parent="UIContainer/TopBar" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 720.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Waiting for server..."
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="MarginContainer" type="MarginContainer" parent="UIContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 720.0
margin_bottom = 1280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="ChatContainer" type="VBoxContainer" parent="UIContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 30.0
margin_right = 690.0
margin_bottom = 1186.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 600, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
custom_constants/separation = 27
alignment = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants" ]

[node name="FeedContainer" type="VBoxContainer" parent="UIContainer/MarginContainer/ChatContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 744.0
margin_right = 660.0
margin_bottom = 944.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags", "custom_constants" ]

[node name="Feed" type="Label" parent="UIContainer/MarginContainer/ChatContainer/FeedContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 660.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
align = 1
valign = 2
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="MessageContainer" type="HBoxContainer" parent="UIContainer/MarginContainer/ChatContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 971.0
margin_right = 660.0
margin_bottom = 1019.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="MessageInput" type="LineEdit" parent="UIContainer/MarginContainer/ChatContainer/MessageContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 660.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 16
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Enter your message..."
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Focus", "Margin", "Placeholder", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="ActionsContainer" type="HBoxContainer" parent="UIContainer/MarginContainer/ChatContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1046.0
margin_right = 660.0
margin_bottom = 1156.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 1
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="Chat" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Visibility", "custom_constants" ]

[node name="EndChat" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_right = 220.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Size Flags", "Textures", "Visibility" ]

[node name="Shoot" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_right = 264.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Sleep" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_right = 396.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "Textures" ]

[node name="Search" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 396.0
margin_right = 528.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="HideSearch" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_right = 455.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Intel" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_right = 660.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="HideIntel" type="TextureButton" parent="UIContainer/MarginContainer/ChatContainer/ActionsContainer" index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 585.0
margin_right = 660.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="ClickZone" type="Button" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 60.0
margin_bottom = -156.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="FeedTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[connection signal="mouse_entered" from="Announcements/Error" to="Announcements/Error" method="_set_mouse_over" binds= [ true ]]

[connection signal="mouse_exited" from="Announcements/Error" to="Announcements/Error" method="_set_mouse_over" binds= [ false ]]

[connection signal="timeout" from="Announcements/Error/Timer" to="Announcements/Error" method="_on_timeout"]

[connection signal="button_down" from="UIContainer/TopBar/Exit" to="UIContainer/TopBar/Exit" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/TopBar/Exit" to="UIContainer/TopBar/Exit" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="text_entered" from="UIContainer/MarginContainer/ChatContainer/MessageContainer/MessageInput" to="." method="_on_Message_Input_text_entered"]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Chat" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Chat" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Chat" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Chat" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/EndChat" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/EndChat" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/EndChat" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/EndChat" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Shoot" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Shoot" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Shoot" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Shoot" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Sleep" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Sleep" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Sleep" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Sleep" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Search" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Search" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Search" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Search" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideSearch" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideSearch" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideSearch" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideSearch" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Intel" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Intel" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Intel" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/Intel" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]

[connection signal="button_down" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideIntel" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideIntel" method="set_self_modulate" binds= [ Color( 0.6, 0.6, 0.6, 1 ) ]]

[connection signal="button_up" from="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideIntel" to="UIContainer/MarginContainer/ChatContainer/ActionsContainer/HideIntel" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]


